# zsh-patina

./: Cargo.toml  README.md  build.rs  zsh-patina.plugin.zsh
.claude/: CLAUDE.md
.github/workflows/: ci.yaml  release.yaml  stale.yml
src/: color.rs  config.rs  daemon.rs  highlighter.rs  main.rs  theme.rs
src/commands/: check.rs  listthemes.rs  mod.rs
src/highlighting/: dynamic.rs  highlighter.rs  mod.rs
templates/: zsh-patina.zsh
themes/: lavender.toml  patina.toml  simple.toml  tokyonight.toml
